[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/ball/Ball.gd" type="Script" id=1]
[ext_resource path="res://game/ball/StateManagerB.gd" type="Script" id=2]
[ext_resource path="res://game/ball/states/Active.gd" type="Script" id=3]
[ext_resource path="res://fonts/comfortaa/Comfortaa-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://game/ball/states/Sticked.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
anti_aliasing = false

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.0
height = 0.0

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 4 )

[node name="Ball" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite1" type="Panel" parent="."]
visible = false
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Node2D" parent="."]
visible = false
rotation = 0.575959

[node name="ColorRect" type="ColorRect" parent="Sprite2"]
margin_left = -17.5
margin_top = -17.5
margin_right = 17.5
margin_bottom = 17.5
rect_pivot_offset = Vector2( 17.5, 17.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Sprite2"]
margin_left = -17.5
margin_top = -17.5
margin_right = 17.5
margin_bottom = 17.5
rect_rotation = 45.0
rect_pivot_offset = Vector2( 17.5, 17.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Visibility" type="VisibilityNotifier2D" parent="."]
position = Vector2( -25, -25 )
rect = Rect2( 0, 0, 50, 50 )
__meta__ = {
"_edit_lock_": true
}

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Active" type="Node" parent="StateManager"]
script = ExtResource( 3 )

[node name="Sticked" type="Node" parent="StateManager"]
script = ExtResource( 5 )

[node name="Duration" type="Timer" parent="StateManager/Sticked"]
wait_time = 2.0
one_shot = true

[node name="Exploding" type="Node" parent="StateManager"]

[node name="SpeedDebug" type="Label" parent="."]
visible = false
margin_left = -78.1353
margin_top = 31.1127
margin_right = 77.8647
margin_bottom = 103.113
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="screen_exited" from="Visibility" to="." method="ball_exited"]
[connection signal="timeout" from="StateManager/Sticked/Duration" to="StateManager/Sticked" method="throw_ball"]
